@@ -1,5 +1,6 @@
 2010-05-31  Benjamin Mack  <benni@typo3.org>
 
+	* Fixed bug #13138: Add hook for manipulating content in felogin extension (Thanks to Thomas Layh)
 	* Fixed bug #14540: Replace icons in module menu to use new styles (Thanks to Steffen Gebert)
 	* Fixed bug #14537: Add spinner icons for toolbar (Thanks to Steffen Gebert)
 	* Fixed bug #14536: Use sprite icons in toolbar (Thanks to Steffen Gebert)
